--- a/CryptoSavings.DAL/CryptoSavings.DAL.csproj
+++ b/CryptoSavings.DAL/CryptoSavings.DAL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
     <PackageReference Include="RestSharp" Version="106.1.0" />
   </ItemGroup>
 
