--- a/CryptoSavings.Core/CryptoSavings.Core.csproj
+++ b/CryptoSavings.Core/CryptoSavings.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CryptoSavings.Contracts\CryptoSavings.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
