Revert "Renaming Contracts project and introducing DI infrastructure"
This reverts commit 49217dceca3cd4acfb39dfaebce9a0805e943c57.

--- a/CryptoSavings.DAL/CryptoSavings.DAL.csproj
+++ b/CryptoSavings.DAL/CryptoSavings.DAL.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CryptoSavings.Contracts\CryptoSavings.Infrastructure.csproj" />
+    <ProjectReference Include="..\CryptoSavings.Contracts\CryptoSavings.Contracts.csproj" />
     <ProjectReference Include="..\CryptoSavings.Model\CryptoSavings.Model.csproj" />
   </ItemGroup>
 
