--- a/CryptoSavings.Core/CryptoSavings.Core.csproj
+++ b/CryptoSavings.Core/CryptoSavings.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CryptoSavings.Contracts\CryptoSavings.Infrastructure.csproj" />
+    <ProjectReference Include="..\CryptoSavings.Contracts\CryptoSavings.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
