Adding autofac DI Container

--- a/CryptoSavings.API/CryptoSavings.API.csproj
+++ b/CryptoSavings.API/CryptoSavings.API.csproj
@@ -16,4 +16,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CryptoSavings.Contracts\CryptoSavings.Contracts.csproj" />
+    <ProjectReference Include="..\CryptoSavings.Infrastructure\CryptoSavings.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
