--- a/CryptoSavings.Development/CryptoSavings.Development.csproj
+++ b/CryptoSavings.Development/CryptoSavings.Development.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CryptoSavings.DAL\CryptoSavings.DAL.csproj" />
+    <ProjectReference Include="..\CryptoSavings.Infrastructure\CryptoSavings.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
