--- a/CryptoSavings.API/CryptoSavings.API.csproj
+++ b/CryptoSavings.API/CryptoSavings.API.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="CryptoSavings.Repository.db" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
   </ItemGroup>
 
